--- a/Tests/Controltest/Window7.xaml
+++ b/Tests/Controltest/Window7.xaml
@@ -1,22 +1,33 @@
-﻿<Window x:Class="Controltest.Window7"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Controltest"
-        mc:Ignorable="d"
-        WindowState="Maximized"
-        
-        Title="Window7" Height="450" Width="800">
-    <Grid>
-        <ListBox Name="LBoxSort" PreviewMouseMove="LBoxSort_PreviewMouseMove" Drop="LBoxSort_Drop" AllowDrop="True">
-            <TextBox Text="1111"/>
-            <TextBlock Text="2222"/>
-            <TextBlock Text="3333"/>
-            <TextBlock Text="4444"/>
-            <TextBlock Text="5555"/>
-        </ListBox>
+﻿<Window
+    x:Class="Controltest.Window7"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Controltest"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Window7"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+    <Grid Name="mTopLevelGrid">
+        <!--<ListBox
+            Name="LBoxSort"
+            Margin="195,25,433.333,65.667"
+            AllowDrop="True"
+            Drop="LBoxSort_Drop"
+            PreviewMouseLeftButtonDown="LBoxSort_PreviewMouseLeftButtonDown"
+            PreviewMouseMove="LBoxSort_PreviewMouseMove"
+            QueryContinueDrag="LBoxSort_QueryContinueDrag">
+            <TextBox Text="112" />
+        -->
+        <!--<TextBlock Text="获取突发事件情况" Background="Red"/>
+            <TextBlock Text="向公司领导汇报"/>
+            <TextBlock Text="向上级汇报"/>
+            <TextBlock Text="协调指挥运营企业"/>-->
+        <!--
+        </ListBox>-->
 
-   
+
+        <local:UserControl4 />
     </Grid>
 </Window>
