--- a/src/Hjmos.BaseControls/Themes/Styles/Button.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Button.xaml
@@ -1,46 +1,73 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls"
+    xmlns:interactivity="clr-namespace:Hjmos.BaseControls.Interactivity">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Base/ButtonBaseStyle.xaml"/>
+        <ResourceDictionary Source="Base/ButtonBaseStyle.xaml" />
+        <ResourceDictionary Source="../Basic/Geometries.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <!--基本样式的button，可加图形和内容-->
-    <Style TargetType="Button" BasedOn="{StaticResource ButtonBaseStyle}">
-        <Setter Property="BorderThickness" Value="1"/>
+    <!--  基本样式的button，可加图形和内容  -->
+    <Style BasedOn="{StaticResource ButtonBaseStyle}" TargetType="Button">
+        <Setter Property="BorderThickness" Value="1" />
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#f5f5f5"/>
-                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Background" Value="#f5f5f5" />
+                <Setter Property="Cursor" Value="Hand" />
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#e0e0e0"/>
+                <Setter Property="Background" Value="#e0e0e0" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
-    <!--可改变边框形状的button-->
-    <Style TargetType="Button" BasedOn="{StaticResource ButtonBorderBaseStyle}" x:Key="ButtonBorder"/>
+    <!--  可改变边框形状的button  -->
+    <Style
+        x:Key="ButtonBorder"
+        BasedOn="{StaticResource ButtonBorderBaseStyle}"
+        TargetType="Button" />
 
 
-    <!--内容只有图形的button-->
-    <Style x:Key="ButtonIcon" BasedOn="{StaticResource ButtonBaseStyle}" TargetType="Button">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="controls:BorderElement.CornerRadius" Value="0"/>
+    <!--  内容只有图形的button  -->
+    <Style
+        x:Key="ButtonIcon"
+        BasedOn="{StaticResource ButtonBaseStyle}"
+        TargetType="Button">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="controls:BorderElement.CornerRadius" Value="0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
-                        <ContentControl  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                            <Path x:Name="Path" Fill="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center"  Stroke="{TemplateBinding BorderBrush}" SnapsToDevicePixels="True" Stretch="Uniform" Width="{TemplateBinding controls:IconElement.Width}" Height="{TemplateBinding controls:IconElement.Height}" Data="{TemplateBinding controls:IconElement.Geometry}"/>
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="{Binding Path=(controls:BorderElement.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}">
+                        <ContentControl
+                            Margin="{TemplateBinding Padding}"
+                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                            <Path
+                                x:Name="Path"
+                                Width="{TemplateBinding controls:IconElement.Width}"
+                                Height="{TemplateBinding controls:IconElement.Height}"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Data="{TemplateBinding controls:IconElement.Geometry}"
+                                Fill="{TemplateBinding Foreground}"
+                                SnapsToDevicePixels="True"
+                                Stretch="Uniform"
+                                Stroke="{TemplateBinding BorderBrush}" />
                         </ContentControl>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True" SourceName="Path">
-                            <Setter Property="Cursor" Value="Hand"/>
+                        <Trigger SourceName="Path" Property="IsMouseOver" Value="True">
+                            <Setter Property="Cursor" Value="Hand" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -50,32 +77,42 @@
 
 
 
-    <!--普通样式的button，不带边框和背景-->
-    <Style TargetType="Button" x:Key="ButtonCustom">
-        <Setter Property="Background" Value="{x:Null}"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="0"/>
-        <Setter Property="BorderThickness" Value="0"/>
+    <!--  普通样式的button，不带边框和背景  -->
+    <Style x:Key="ButtonCustom" TargetType="Button">
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border x:Name="Chrome" SnapsToDevicePixels="True" CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}"  BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}">
-                        <ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                          RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                    <Border
+                        x:Name="Chrome"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}"
+                        SnapsToDevicePixels="True">
+                        <ContentPresenter
+                            Margin="{TemplateBinding Padding}"
+                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                            RecognizesAccessKey="True"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Opacity" Value=".9"/>
-                            <Setter Property="Background" TargetName="Chrome" Value="{Binding Path=(controls:BackgroundSwitchElement.MouseHoverBackground),RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
-                            <Setter Property="Cursor" Value="Hand"/>
+                            <Setter Property="Opacity" Value=".9" />
+                            <Setter TargetName="Chrome" Property="Background" Value="{Binding Path=(controls:BackgroundSwitchElement.MouseHoverBackground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                            <Setter Property="Cursor" Value="Hand" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
-                            <Setter Property="Opacity" Value=".6"/>
-                            <Setter Property="Background" TargetName="Chrome" Value="{Binding Path=(controls:BackgroundSwitchElement.MouseDownBackground),RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
+                            <Setter Property="Opacity" Value=".6" />
+                            <Setter TargetName="Chrome" Property="Background" Value="{Binding Path=(controls:BackgroundSwitchElement.MouseDownBackground), RelativeSource={RelativeSource Mode=TemplatedParent}}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter Property="Opacity" Value=".4"/>
+                            <Setter Property="Opacity" Value=".4" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -96,7 +133,7 @@
                         <controls:SimplePanel>
                             <ContentPresenter Name="Content" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                               RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            <controls:LoadingCircle x:Name="Loading" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"  
+                            <controls:LoadingCircle x:Name="Loading" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                                     IsRunning="True" Visibility="Collapsed"/>
                         </controls:SimplePanel>
                     </Border>
@@ -126,11 +163,73 @@
                                 </BeginStoryboard>
                             </EventTrigger.Actions>
                         </EventTrigger>
-                        
+
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>-->
+
+
+    <Style TargetType="controls:EditButton">
+        <Setter Property="Background" Value="White" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:EditButton">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Button
+                            Name="PART_edit"
+                            Grid.Column="1"
+                            controls:IconElement.Geometry="{StaticResource EditGeometry}"
+                            controls:IconElement.Height="12"
+                            controls:IconElement.Width="12"
+                            Background="{TemplateBinding Background}"
+                            Command="interactivity:ControlCommands.EditCommand"
+                            Cursor="Hand"
+                            Style="{StaticResource ButtonIcon}" />
+                        <Button
+                            Name="PART_add"
+                            Grid.Column="0"
+                            controls:IconElement.Geometry="{StaticResource AddGeometry}"
+                            controls:IconElement.Height="12"
+                            controls:IconElement.Width="12"
+                            Background="{TemplateBinding Background}"
+                            Command="interactivity:ControlCommands.AddCommand"
+                            Cursor="Hand"
+                            Style="{StaticResource ButtonIcon}"
+                            Visibility="Collapsed" />
+                        <Button
+                            Name="PART_confirm"
+                            Grid.Column="1"
+                            controls:IconElement.Geometry="{StaticResource CheckGeometry}"
+                            controls:IconElement.Height="12"
+                            controls:IconElement.Width="12"
+                            Background="{TemplateBinding Background}"
+                            Command="interactivity:ControlCommands.Confirm"
+                            Cursor="Hand"
+                            Style="{StaticResource ButtonIcon}"
+                            Visibility="Collapsed" />
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEdit" Value="True">
+                            <Setter TargetName="PART_add" Property="Visibility" Value="Visible" />
+                            <Setter TargetName="PART_confirm" Property="Visibility" Value="Visible" />
+                            <Setter TargetName="PART_edit" Property="Visibility" Value="Collapsed" />
+                        </Trigger>
+                        <Trigger Property="IsEdit" Value="False">
+                            <Setter TargetName="PART_add" Property="Visibility" Value="Collapsed" />
+                            <Setter TargetName="PART_confirm" Property="Visibility" Value="Collapsed" />
+                            <Setter TargetName="PART_edit" Property="Visibility" Value="Visible" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
